# obstruct-rs

./: Cargo.toml  README.md
crates/obstruct/: Cargo.toml
crates/obstruct-macros/: Cargo.toml
crates/obstruct-macros/src/: destruct.rs  instruct.rs  lib.rs
crates/obstruct-test/: Cargo.toml
crates/obstruct-test/src/: lib.rs  proc_macro.rs
crates/obstruct/src/: lib.rs
crates/obstruct/tests/: runner.rs
crates/obstruct/tests/should_fail/: call_bad_arg_name.rs  call_bad_arg_name.stderr  call_missing_args.rs  call_missing_args.stderr  call_too_many_args.rs  call_too_many_args.stderr  struct_bad_field_names.rs  struct_bad_field_names.stderr
crates/obstruct/tests/should_pass/: mod.rs  tests.rs
crates/record/: Cargo.toml
crates/record-macros/: Cargo.toml
crates/record-macros/src/: lib.rs
crates/record-test/: Cargo.toml
crates/record-test/src/: const_str.rs  noop.rs  proc_macro.rs
