[package]
name = "obstruct-macros"
version = "0.1.1"
edition = "2021"
description = "Macros for obstruct. You probably want to depend on obstruct instead."
readme = "../../README.md"
repository = "https://github.com/Yoric/obstruct-rs"
license = "MIT"

[dependencies]
itertools = "0.10"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0.2", features = ["full", "parsing", "printing", "extra-traits"] }

[lib]
proc-macro = true
