[package]
name = "obstruct"
version = "0.1.0"
edition = "2021"
description = "An experimental implementation of anonymous structs and named function arguments"
readme = "../../README.md"
license = "MIT"
repository = "https://github.com/Yoric/obstruct-rs"

[dependencies]
trybuild = "1.0.85"
obstruct-macros = { version = "0.1.0", path = "../obstruct-macros" }

